sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:9: error: not found: value j
			if (plusPetit(j+1,j)) {
                                      ^AlgCocktailSort2:10: error: not found: value j
				echange(j,j+1)
                                        ^AlgCocktailSort2:15: error: not found: value j
			if (plusPetit(j+1,j)) {
                                      ^AlgCocktailSort2:16: error: not found: value j
				echange(j,j+1)
                                        ^