sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
	var tri=false
	var debut=0
	var fin=getNombreValeurs-2
	while (!tri) {
		tri=true
		for (i<- debut to fin) {
			if (plusPetit(j+1,j)) {
				echange(j,j+1)
				tri=false
			}
		}
		for (i<- fin to debut by -1) {
			if (plusPetit(j+1,j)) {
				echange(j,j+1)
				tri=false
			}
		}
	}
}
